tests/baselines/reference/parserClassDeclaration11.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration11.ts] ////

parserClassDeclaration11.ts(2,4): error TS2390: Constructor implementation is missing.


==== parserClassDeclaration11.ts (1 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
       foo() { }
    }